--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.minecraftforge.gradle' version '5.1.69'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id "org.jetbrains.kotlin.jvm" version "1.7.10"
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
+// THIS FILE IS COPIED FROM https://github.com/thedarkcolour/KotlinForForge/blob/site/thedarkcolour/kotlinforforge/gradle/kff-3.7.1.gradle
 apply from: 'kff-3.7.1-patched.gradle'
 
 group = 'com.sifsstudio'
@@ -98,7 +99,7 @@ dependencies {
     shade "org.mozilla:rhino:1.7.14"
 }
 
-minecraft.runs.all {
+minecraft.runs.configureEach {
     String previous = lazyTokens['minecraft_classpath'].get()
     lazyToken('minecraft_classpath') {
         configurations.shade.copyRecursive().resolve().collect {
