feat: context ownership transfer initial

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+systemProp.http.proxyHost = localhost
+systemProp.http.proxyPort = 8800
+systemProp.https.proxyHost = localhost
+systemProp.https.proxyPort = 8800
