build: mixin support

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
     id 'org.parchmentmc.librarian.forgegradle' version '1.+'
     id 'org.jetbrains.kotlin.jvm' version '1.8.22'
+    id 'org.spongepowered.mixin' version '0.7.+'
 }
 
 version = '1.0-SNAPSHOT'
@@ -102,6 +103,8 @@ configurations {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.19.4-45.1.0'
 
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
     implementation 'thedarkcolour:kotlinforforge:4.3.0'
     copyImplementation 'org.mozilla:rhino:1.7.14'
 
@@ -109,6 +112,11 @@ dependencies {
         //noinspection GroovyAssignabilityCheck
         jarJar.pin(it, "1.7.14")
     }
+}
+
+mixin {
+    add sourceSets.main, 'mixins.botjs.refmap.json'
+    config 'mixins.botjs.json'
 }
 
 task prepare(type: Copy) {
